<resources>
    <string name="app_name">MyCatApplication</string>

    <string name="label_name">Breed Name</string>
    <string name="label_origin">Origin</string>
    <string name="label_country">Country</string>
    <string name="label_pattern">Pattern</string>
    <string name="update_favorite">Save to Favorite</string>
    <string name="open_favorite_page">Open Favorite Page</string>
    <string name="cat_application">Cat Application</string>

    <string name="delete_button">Delete</string>
    <string name="pref_dark_mode">pref_dark_mode</string>
    <string name="open_setting_page">Open Setting Page</string>
    <string name="list_breed_types">List Breed Types:</string>
    <string name="title_favorite">Favorite</string>
    <string name="illustration_of_cat">Illustration of cat</string>
</resources>